openshift/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhtas-gateway-api
  labels:
    istio-discovery: enabled
